<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo" />

    <EditText
        android:id="@+id/edtMensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensagem" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarCanal1"
        android:text="@string/enviar_notifica_o_normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarCanal2"
        android:text="@string/enviar_notifica_o_silenciosa" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarCanal3"
        android:text="@string/enviar_notifica_o_expans_vel" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarCanal4"
        android:text="@string/enviar_notifica_o" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarCanal5"
        android:text="@string/enviar_notificao_resposta" />

    <TextView
        android:id="@+id/respostaNoti"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="A RESPOSTA SERA EXIBIDA AQUI"
        android:textAlignment="center"
        android:textSize="14sp" />

</LinearLayout>